--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+
+    padding-top: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+
+}
+
+.itemCell {
+    
+    color: green;
+}
+
+.itemCell:hover{
+    
+    color: blue;
+}
